docs/assets/stylesheet/home.css
.md-content {
	max-width: none;
	margin-left: 0;
	margin-right: 0;
	margin-top: 0;
	--distance-to-top-of-page: 7.2rem;
}

[data-md-color-scheme="slate"] {
	--background-img: url("../../assets/images/bg-dark.png");
}

[data-md-color-scheme="default"] {
	--background-img: url("../../assets/images/bg-light.png");
}


@media screen and (max-width: 76.25rem) {
	.md-content {
		--distance-to-top-of-page: 4.8rem;
	}
}

#catworkdoc-home {
	background-image: var(--background-img);
	background-position: center center;
	background-size: cover;

	width: 100%;
	height: calc(100vh - var(--distance-to-top-of-page));
  overflow-y: auto;

	display: flex;
	flex-direction: column;
	align-items: left;
	justify-content:end;
}

#catworkdoc-contentgradient {
	margin: 0;
	background: linear-gradient(
		180deg, 
		rgba(0,0,0,0) 0%, 
		var(--md-default-bg-color) 100%
	);
	height: 100px;
}

#catworkdoc-lower-bg {
	background: var(--md-default-bg-color);
}

#catworkdoc-margin {
	margin-left: 5rem;
	margin-right: 5rem;
}

#catworkdoc-homeInner {
	display: flex;
	flex-direction: column;
	align-items: left;
	justify-content:end;
}

#catworkdoc-noMargin {
	line-height: 1em;
	margin-top: 0;
	margin-bottom: 0;
}

#catworkdoc-noMarginBig {
	line-height: 1em;
	margin-top: 0;
	margin-bottom: 0;
	color: var(--md-default-fg-color--light);
}

#catworkdoc-content {
	padding-left: 1rem;
	padding-right: 1rem;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 0;
	max-width: 61em;
}

#catworkdoc-secondary-bg {
	padding-top: 1rem;
	padding-bottom: 1rem;
	background-color: var(--md-footer-bg-color)
}

.md-main__inner {
	margin-top: 0;
	margin-right: 0;
	margin-left: 0;
}

.md-content__inner {
	margin: 0;
	padding-top: 0;
}

.md-content__inner::before {
	height: 0;	
}

